[gd_scene load_steps=6 format=3 uid="uid://bluocjb6q5ywt"]

[ext_resource type="Script" path="res://Main.gd" id="1_aqd75"]
[ext_resource type="PackedScene" uid="uid://dwrtdf5d5bv0v" path="res://Mob.tscn" id="2_5vhew"]
[ext_resource type="PackedScene" uid="uid://cicuu72jdt8ue" path="res://Player.tscn" id="3_qplh0"]
[ext_resource type="PackedScene" uid="uid://dvd43ieosgauh" path="res://Hud.tscn" id="4_ooy7g"]

[sub_resource type="Curve2D" id="Curve2D_ep1yn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 715.229, 0, 0, 0, 0, 0, 715.229, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_aqd75")
mob_scene = ExtResource("2_5vhew")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156866, 0.391111, 0.394334, 1)

[node name="Player" parent="." instance=ExtResource("3_qplh0")]
position = Vector2(240, 450)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
scale = Vector2(1, 1.00667)
curve = SubResource("Curve2D_ep1yn")

[node name="MobPathLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_ooy7g")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
